@@ -6,6 +6,8 @@
 
         - Python33 から Python34 に移行
 
+        - ckit.Window の代わりに ckit.TextWindow を使うようにした。(ckitの設計変更に追従)
+
     **1.63**
 
         - デフォルト設定ファイルに、クリップボードのテキストの全角／半角を変換して貼りつける機能の例を追加。(To Half-Width, To Full-Width)
